# server.js
@@ -5,6 +5,7 @@ const swaggerDocument = require("./swagger.json");
 const { connectToDb } = require("./db/connect");
 
 const contactsRoutes = require("./routes/contacts");
+const professionalRoutes = require("./routes/professional");
 
 const app = express();
 const port = 8080;
@@ -14,6 +15,7 @@ app.use(express.json());
 
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use("/contacts", contactsRoutes);
+app.use("/professional", professionalRoutes);
 
 connectToDb().then(() => {
   app.listen(port, () => {
